--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> The game on <a href="http://git.io/2048">this site</a> is the original version of 2048. Apps for <a href="https://itunes.apple.com/us/app/2048-by-gabriele-cirulli/id868076805" target="_blank">iOS</a> and <a href="https://play.google.com/store/apps/details?id=com.gabrielecirulli.app2048" target="_blank">Android</a> are also available. Other versions are derivatives or fakes, and should be used with caution.
+    <strong class="important">Note:This version created by <a href="github.com/tr4656">tr4656</a> of <a href="http://icebrg.us">Icebrg.</a>
     </p>
     <hr>
     <p>
